<resources>
    <string name="app_name">Mose</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_inxp">You can login with your e-mail and password.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="mail_account">Mail Account</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_upxp">Please fill all fields!</string>
    <string name="name_surname">Name Surname</string>
    <string name="phone">Phone Number</string>
    <string name="fav_text">Your favorite movies</string>
    <string name="trend">Trending</string>
    <string name="series">Series</string>
    <string name="movies">Movies</string>
</resources>