<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="newsAdapter"
            type="com.gulsahozaltun.moseapp.adapter.PagerAdapter" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.NewsFragment">

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="3">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:foregroundGravity="center"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip1"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/red"
                        android:checkable="true"
                        android:checked="false"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/average_sans"
                        android:gravity="center"
                        android:text="@string/movies"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:checkedIconVisible="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip2"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/red"
                        android:checkable="true"
                        android:checked="false"
                        android:fontFamily="@font/average_sans"
                        android:gravity="center"
                        android:text="@string/series"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:checkedIconVisible="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip3"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/red"
                        android:checkable="true"
                        android:checked="false"
                        android:fontFamily="@font/average_sans"
                        android:gravity="center"
                        android:text="@string/trend"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:checkedIconVisible="true" />


                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>
        </HorizontalScrollView>



        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerr"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adapter="@{newsAdapter}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"></androidx.viewpager2.widget.ViewPager2>

<!--        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/circleIndicator3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/red"
            app:ci_drawable="@drawable/point"
            app:ci_height="5dp"
            android:gravity="center"
            app:ci_drawable_unselected="@drawable/point"
            app:ci_width="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewPagerr" />-->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar4"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Trending" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>