<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="adapter"
            type="com.gulsahozaltun.moseapp.adapter.MoviesAdapter" />


    </data>



        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fafafa"
            tools:context=".fragment.MainPageFragment">

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:weightSum="3">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:foregroundGravity="center"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip1"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/red"
                            android:checkable="true"
                            android:checked="false"
                            android:focusable="true"
                            android:focusableInTouchMode="false"
                            android:fontFamily="@font/average_sans"
                            android:gravity="center"
                            android:text="@string/movies"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:checkedIconVisible="true" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip2"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/red"
                            android:checkable="true"
                            android:checked="false"
                            android:fontFamily="@font/average_sans"
                            android:gravity="center"
                            android:text="@string/series"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:checkedIconVisible="true" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip3"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/red"
                            android:checkable="true"
                            android:checked="false"
                            android:fontFamily="@font/average_sans"
                            android:gravity="center"
                            android:text="@string/trend"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:checkedIconVisible="true" />


                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>
            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                app:adapter="@{adapter}"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14"
                app:spanCount="2" />

<!--            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:adapter="@{newsAdapter}"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />-->


<!--            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/average_sans"
                android:text="Trending"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar3" />-->

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/average_sans"
                android:text="@string/movies"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="Mose" />


        </androidx.constraintlayout.widget.ConstraintLayout>


</layout>